--- a/frontend/index.html
+++ b/frontend/index.html
@@ -335,7 +335,8 @@
                     });
                     try {
                         // POST the quiz results to the backend endpoint
-                        const response = await fetch('https://YOUR-BACKEND-DOMAIN/submit-quiz', {
+                        // Update: point API call to the deployed backend on Render
+                        const response = await fetch('https://gold-bot-giver.onrender.com/submit-quiz', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify({ email: emailValue, answers: userAnswers })
