--- a/frontend/result-fast-profit.html
+++ b/frontend/result-fast-profit.html
@@ -231,7 +231,7 @@
 
                     <p class="font-bold text-white mb-4">เปิดรับสมัคร "รุ่นที่ 1" จำนวนจำกัดเพียง 50 ท่านเท่านั้น</p>
                     <p class="font-bold text-red-500 mb-4">(ปิดรับสมัครวันที่ 7 กันยายนนี้)</p>
-                    <a href="https://YOUR-STRIPE-LINK-4900" class="inline-block cta-prominent">
+                    <a href="https://buy.stripe.com/3cI5kC5S6dc4dOI6ANenS01" class="inline-block cta-prominent">
                         ปลดล็อกไอเดียของฉันใน 7 วัน! (วางเงินประกัน 4,900 บาท)
                     </a>
                 </div>
