--- a/frontend/the-fast-track-kit.html
+++ b/frontend/the-fast-track-kit.html
@@ -211,7 +211,7 @@
                 <p class="text-slate-400">หากคุณปิดหน้าต่างนี้ไป ข้อเสนอ "Fast-Track" พร้อมส่วนลดพิเศษนี้จะหายไปตลอดกาล</p>
                 
                 <!-- Primary CTA uses Stripe 2,900 link -->
-                <a href="https://YOUR-STRIPE-LINK-2900" class="inline-block cta-prominent mt-6">
+                <a href="https://buy.stripe.com/eVq4gy94i2xq2609MZenS02" class="inline-block cta-prominent mt-6">
                     ใช่! ฉันต้องการชุดเร่งสปีด! (อัปเกรดด้วยเงินเพิ่ม 2,900 บาท)
                 </a>
                 <!-- Decline link redirects to thank you standard page -->
