--- a/frontend/thank-you-standard.html
+++ b/frontend/thank-you-standard.html
@@ -75,7 +75,7 @@
                     <span class="text-3xl font-extrabold text-gold mr-6">1</span>
                     <div>
                         <h3 class="text-xl font-bold mb-1">(สำคัญที่สุด) เข้าร่วมกลุ่ม:</h3>
-                        <p class="text-slate-400">"โปรด <a href="#" class="text-gold underline hover:text-yellow-300">คลิกที่นี่เพื่อเข้าร่วมกลุ่ม Facebook ส่วนตัว</a> สำหรับนักเรียนรุ่นที่ 1 ของเรา (ต้องตอบคำถามเพื่อยืนยันตัวตน)"</p>
+                        <p class="text-slate-400">"โปรด <a href="https://www.facebook.com/groups/1235056368309932" class="text-gold underline hover:text-yellow-300">คลิกที่นี่เพื่อเข้าร่วมกลุ่ม Facebook ส่วนตัว</a> สำหรับนักเรียนรุ่นที่ 1 ของเรา (ต้องตอบคำถามเพื่อยืนยันตัวตน)"</p>
                     </div>
                 </li>
                 <li class="bg-slate-800 p-6 rounded-xl border border-slate-700 flex items-start">
