--- a/frontend/result-fast-profit.html
+++ b/frontend/result-fast-profit.html
@@ -10,7 +10,7 @@
 
     <!-- Google Fonts: Inter & Noto Sans Thai -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Noto+Sans+Thai:wght@400;700;800&display=swap" rel="stylesheet">
 
     <style>
@@ -95,7 +95,7 @@
             <div class="container mx-auto px-6 space-y-16">
                 <div class="text-center border-t border-b border-slate-700 py-4">
                     <p class="text-slate-400 text-sm">ผลลัพธ์ทั้งหมดมาจากการ Backtest ด้วยเงินทุนเริ่มต้น <span class="font-bold text-white">$10,000</span></p>
-                    <p class="text-slate-400 text-sm">รายงานฉบับเต็ม (กราฟ, จำนวนการเทรด, ฯลฯ) จะถูกส่งเข้าอีเมลที่คุณกรอกไว้</p>
+                    <p class="text-slate-400 text-sm">สามารถกลับมาตรวจสอบหน้านี้ได้ที่อีเมลของคุณ</p>
                 </div>
 
                 <!-- BOT 1: The Singularity -->
@@ -122,6 +122,12 @@
                             <p class="text-slate-400">ทุก 1 บาทที่เสียไป จะ<span class="text-white">ทวงคืนกลับมา 4.04 บาท</span> (<span class="font-bold text-green-400">Profit Factor</span>)</p>
                         </div>
                     </div>
+                    <!-- CTA Button Added Here -->
+                    <div class="mt-10 text-center">
+                        <a href="thesingularity.html" target="_blank" rel="noopener noreferrer"  class="inline-block bg-yellow-500 text-slate-900 font-bold py-4 px-10 rounded-lg hover:bg-yellow-400 transition duration-300 text-xl shadow-lg hover:shadow-yellow-500/40 transform hover:scale-105">
+                            ดูกราฟรายงานฉบับเต็ม
+                        </a>
+                    </div>
                 </div>
 
                 <!-- BOT 2: The Scalpel -->
@@ -147,6 +153,12 @@
                             <p class="text-4xl font-extrabold text-green-400 my-2">2.92</p>
                             <p class="text-slate-400"><span class="font-bold text-green-400">Sharpe Ratio</span> <span class="text-white">การันตีการทำกำไรที่คุ้มค่าทุกความเสี่ยง</span></p>
                         </div>
+                    </div>
+                    <!-- CTA Button Added Here -->
+                    <div class="mt-10 text-center">
+                        <a href="thescalpel.html" target="_blank" rel="noopener noreferrer"  class="inline-block bg-yellow-500 text-slate-900 font-bold py-4 px-10 rounded-lg hover:bg-yellow-400 transition duration-300 text-xl shadow-lg hover:shadow-yellow-500/40 transform hover:scale-105">
+                            ดูกราฟรายงานฉบับเต็ม
+                        </a>
                     </div>
                 </div>
             </div>
@@ -225,4 +237,3 @@
 
 </body>
 </html>
-
