--- a/frontend/result-stable-growth.html
+++ b/frontend/result-stable-growth.html
@@ -103,7 +103,7 @@
             <div class="container mx-auto px-6 space-y-16">
                  <div class="text-center border-t border-b border-slate-700 py-4">
                     <p class="text-slate-400 text-sm">ผลลัพธ์ทั้งหมดมาจากการ Backtest ด้วยเงินทุนเริ่มต้น <span class="font-bold text-white">$10,000</span></p>
-                    <p class="text-slate-400 text-sm">รายงานฉบับเต็ม (กราฟ, จำนวนการเทรด, ฯลฯ) จะถูกส่งเข้าอีเมลที่คุณกรอกไว้</p>
+                    <p class="text-slate-400 text-sm">สามารถกลับมาตรวจสอบหน้านี้ได้ที่อีเมลของคุณ</p>
                 </div>
 
                 <!-- BOT 1: The Oracle -->
@@ -130,6 +130,12 @@
                             <p class="text-slate-400">ผลกำไรรวมตลอดปี<br>(เฉลี่ย 8.84% ต่อไตรมาส)</p>
                         </div>
                     </div>
+                    <!-- CTA Button Added Here -->
+                    <div class="mt-10 text-center">
+                        <a href="theoracle.html" target="_blank" rel="noopener noreferrer"  class="inline-block bg-yellow-500 text-slate-900 font-bold py-4 px-10 rounded-lg hover:bg-yellow-400 transition duration-300 text-xl shadow-lg hover:shadow-yellow-500/40 transform hover:scale-105">
+                            ดูกราฟรายงานฉบับเต็ม
+                        </a>
+                    </div>                    
                 </div>
 
                 <!-- BOT 2: The Apex -->
@@ -155,6 +161,12 @@
                             <p class="text-4xl font-extrabold text-green-400 my-2">$14,009.15</p>
                             <p class="text-slate-400">ผลกำไรรวมตลอดปี<br>(เฉลี่ย 35.02% ต่อไตรมาส)</p>
                         </div>
+                    </div>
+                    <!-- CTA Button Added Here -->
+                    <div class="mt-10 text-center">
+                        <a href="theapex.html" target="_blank" rel="noopener noreferrer"  class="inline-block bg-yellow-500 text-slate-900 font-bold py-4 px-10 rounded-lg hover:bg-yellow-400 transition duration-300 text-xl shadow-lg hover:shadow-yellow-500/40 transform hover:scale-105">
+                            ดูกราฟรายงานฉบับเต็ม
+                        </a>
                     </div>
                 </div>
             </div>
